--- a/4.1
+++ b/4.1
@@ -10,30 +10,26 @@ const double PI = 3.141592653589793;
 int main() {
     double r = 5.00;
     double dt = 0.05;
-    double start_time = 3.00;
+    double tPoczatkowe = 3.00;
     double T = 12.5;
 
-    ofstream file("wyniki.txt");
-    if (!file.is_open()) {
-        cout << "Nie można otworzyć pliku do zapisu!" << endl;
-        return 1;
-    }
-    
-    file << fixed << setprecision(2);
+  fstream plik;
+  plik.open("wyniki.txt", ios::out);
+  if(!plik.is_open()) {
+    cout << "plik sie nie otwiera" << "\n";
+  }
 
-    for (double t = start_time; t <= T; t += dt) {
+    for (double t = tPoczatkowe; t <= T; t += dt) {
         double x = r * sin(2 * PI * t / T);
         double y = r * cos(2 * PI * t / T);
-
+    plik << x << "\t" << y << "\n";
         if (y > x) {
-            file << "Czas, w którym y > x: " << t - start_time << " sekund" << endl;
+            cout << fixed << setprecision(2) << t - tPoczatkowe << "\n";
             break;
         }
     }
-    
-    file.close();
 
-    cout << "Wyniki zostały zapisane do pliku wyniki.txt" << endl;
+    plik.close();
 
     return 0;
 }
